# Goose

./: .gitignore  MANIFEST.in  README.md  config_temp.ini  pyproject.toml  setup.py
Project/: README.md  pyproject.toml  requirements.txt  setup.py
goose/: app.py  temp.py
gooseDownloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
